// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<div>
  <h1>
    Hello
  </h1>
</div>
`;

exports[`returns a component with React components 1`] = `
<div>
  <h2>
    Hello
  </h2>
  <div>
    Beep
  </div>
</div>
`;
